fix getSummaryOfAllAttributesAsComponents returning immutable list (#4405)